--- a/setup.cfg
+++ b/setup.cfg
@@ -12,5 +12,5 @@ install_requires =
     # Any dependencies required by the plugin
 
 [options.entry_points]
-papercast.processors =
+papercast.publishers =
     GithubPagesPodcastPublisher = papercast_github_pages_podcast:GithubPagesPodcastPublisher
